--- a/graylog_infra/elastic.yml
+++ b/graylog_infra/elastic.yml
@@ -1,6 +1,6 @@
 ---
 # Pretask install python
- - hosts: graylog
+ - hosts: es-server 
    become: true
    gather_facts: false
    pre_tasks:
@@ -8,16 +8,11 @@
        raw: sudo apt-get -y install python
 
 # Install common package on each nodes
- - hosts: graylog 
+ - hosts: es-server 
    become: true
    roles:
      - { role: common }
 
-# install graylog-server
- - hosts: graylog
-   become: true
-   vars:
-     gl_ip: "{{ ansible_default_ipv4.address }}"
-     gl_public_ip: '107.20.43.221'
+# install elasticsearch
    roles:
-     - { role: graylog }
+     - { role: elastic }
