--- a/graylog_infra/mongo.yml
+++ b/graylog_infra/mongo.yml
@@ -1,6 +1,6 @@
 ---
 # Pretask install python
- - hosts: graylog
+ - hosts: mongo 
    become: true
    gather_facts: false
    pre_tasks:
@@ -8,16 +8,9 @@
        raw: sudo apt-get -y install python
 
 # Install common package on each nodes
- - hosts: graylog 
+ - hosts: mongo
    become: true
    roles:
      - { role: common }
-
-# install graylog-server
- - hosts: graylog
-   become: true
-   vars:
-     gl_ip: "{{ ansible_default_ipv4.address }}"
-     gl_public_ip: '107.20.43.221'
-   roles:
-     - { role: graylog }
+# install mongo-server
+     - { role: mongodb }
