--- a/graylog_infra/roles/mongodb/tasks/config_mongo.yml
+++ b/graylog_infra/roles/mongodb/tasks/config_mongo.yml
@@ -2,7 +2,7 @@
  - name: Add IP address to host file
    lineinfile:
      dest: /etc/hosts
-     line: "{{ hostvars[item].ansible_default_ipv4.address }} {{ ec2_tag_Name }}"
+     line: "{{ hostvars[item].ansible_default_ipv4.address }} {{ hostvars[item].ec2_tag_Name }}"
      state: present
    with_items: "{{ groups['mongo'] }}"
 
